k8s/tests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: app
      image: docker.io/agslima/software-delivery-pipeline@sha256:deadbeef
